platform/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-dev
  labels: {pod-security.kubernetes.io/enforce: restricted, pod-security.kubernetes.io/audit: restricted, pod-security.kubernetes.io/warn: restricted}
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-prod
  labels: {pod-security.kubernetes.io/enforce: restricted, pod-security.kubernetes.io/audit: restricted, pod-security.kubernetes.io/warn: restricted}
